# epts-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-ocr.txt
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: FIELDS.md
epts_parser/: __init__.py  __main__.py  auto_parser.py  exporters.py  mappings.py  models.py  models_epsm.py  ocr.py  parser.py  parser_epsm.py  validators.py  validators_epsm.py
tests/: test_auto_parser.py  test_epsm_parser.py  test_exporters.py  test_parser.py  test_validators.py
tests/fixtures/: john_deere_8r.json  lada_xray.json
