[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epts-parser"
version = "1.1.0"
description = "Structured data extraction from Russian vehicle electronic passport (ЭПТС/ЭПСМ) PDF"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "OlegKarenkikh", email = "44174021+OlegKarenkikh@users.noreply.github.com" },
]
keywords = ["epts", "epsm", "pts", "vehicle", "passport", "pdf", "parser", "russia", "samohodny"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
ocr = [
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
epts-parser = "epts_parser.__main__:main"

[project.urls]
Homepage = "https://github.com/OlegKarenkikh/epts-parser"
Repository = "https://github.com/OlegKarenkikh/epts-parser"
Issues = "https://github.com/OlegKarenkikh/epts-parser/issues"
Changelog = "https://github.com/OlegKarenkikh/epts-parser/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["epts_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["epts_parser"]
